# pd-notification-mgr

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
pd_notify/: __init__.py  api.py  bulk.py  cli.py  display.py  menus.py
tests/: __init__.py  test_api.py  test_bulk.py  test_cli.py  test_display.py  test_integration.py  test_menus.py
