[project]
name = "pd-notify"
version = "0.1.0"
description = "Interactive PagerDuty notification rule manager"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "InquirerPy>=0.3.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pd-notify = "pd_notify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
